chore: refactor files